*fix package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Dark-Plus-ColorBlind",
+    "name": "dark-plus-colorblind",
     "displayName": "Dark+ (color blind)",
     "description": "Dark+ Color Blind",
     "publisher": "PedroFonsecaDEV",
